--- a/layouts/partials/hugopress/modules/hb-custom/hooks/head-end.html
+++ b/layouts/partials/hugopress/modules/hb-custom/hooks/head-end.html
@@ -14,4 +14,4 @@
         };
         quizdown.register(quizdownHighlight).register(quizdownKatex).init(config)
     </script>
-    
+    <script src="https://d3js.org/d3.v7.min.js"></script>
